src/main/java/com/example/topgoback/RejectionLetters/Repository/RejectionLetterRepository.java
package com.example.topgoback.RejectionLetters.Repository;

import com.example.topgoback.RejectionLetters.Model.RejectionLetter;
import org.springframework.data.jpa.repository.JpaRepository;

public interface RejectionLetterRepository extends JpaRepository<RejectionLetter,Integer> {
}
